Upgrade goutil to reuse hex tag to validate api data (#7)
* Upgrade goutil to reuse hex tag to validate api data

* Fix copilot comments
